# edon-lesson

./: .env.example  .gitignore  .gitleaks.toml  .gitleaksignore  .prettierignore  README.md  budgets.json  eslint.config.js  package-lock.json  package.json  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  schema.yml  security.yml
_bmad/: config.toml  config.user.toml
_bmad-output/: project-context.md
_bmad-output/implementation-artifacts/: 1-1-lesson-script-schema-v1-0-package.md  1-2-monorepo-scaffold-ci-gates-and-deploy-skeleton.md  sprint-status.yaml
_bmad-output/planning-artifacts/: edon-lesson-studio-product-brief.md  epics.md  implementation-readiness-report-2026-07-18.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/bmad-loop/: config.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
authoring/: package.json
authoring/src/: index.js
authoring/test/: smoke.test.js
backend/: pyproject.toml
backend/src/edon/: __init__.py
backend/src/edon/adapters/: __init__.py
backend/src/edon/api/: __init__.py  app.py
backend/src/edon/config/: __init__.py  logging.py
backend/src/edon/core/: __init__.py
backend/src/edon/workers/: __init__.py
backend/tests/: test_health.py
deploy/: deploy.sh
deploy/nginx/: edon.conf
deploy/systemd/: edon-api.service  edon-worker-delivery.service  edon-worker-generation@.service  edon-worker-maintenance.service
docs/adr/: ADR-001-backend-framework.md  ADR-002-launch-model-benchmark-plan.md  ADR-003-job-queue.md  ADR-004-lesson-storage-versioning.md  ADR-005-generation-pipeline.md  ADR-006-player-embedding-and-bundles.md  ADR-007-simulation-sandbox-and-checks.md  ADR-008-tenant-isolation-enforcement.md  ADR-009-identity-sessions-credentials.md  ADR-010-attempts-scoring-lms-delivery.md  ADR-011-data-protection-mechanics.md  ADR-012-object-storage-and-published-assets.md  ADR-013-quota-budget-rate-limit-subsystem.md  ADR-014-player-composition-interfaces.md  ADR-015-ci-provider.md  ADR-016-deploy-transport.md
docs/integrations/: block-edon-ai-diagram-api.md  edon-rag-retrieval.md  mod-edonlesson-platform-api.md
docs/runbooks/: deploy.md
docs/security/: threat-model.md
e2e/: health.smoke.spec.js  playwright.config.js
fixtures/edon-rag/: 01_basic_query.json  02_top_k_and_min_score.json  03_document_ids_filter.json
player/: package.json
player/src/: index.js
player/test/: smoke.test.js
schema/budgets/: budgets.schema.json
schema/docs/: README.md  block-types.md  reserved-extensions.md  versioning.md
schema/fixtures/: expectations.json
schema/fixtures/forward-compat/: future-major-invalid.json  future-major.json  future-minor.json  unknown-block-type.json
schema/fixtures/invalid/: assetref-bad-scheme.json  assetref-empty-ref.json  assetref-missing-transfersize.json  (+16 more)
schema/js/: package.json
schema/py/: pyproject.toml
schema/py/src/edon_lesson_schema/: __init__.py  validator.py
schema/py/src/edon_lesson_schema/schemas/lesson/1.0/: defs.schema.json  lesson.schema.json
schema/py/src/edon_lesson_schema/schemas/lesson/1.0/blocks/: diagram.schema.json  model3d.schema.json  quiz.schema.json  simulation.schema.json
schema/py/tests/: test_validate.py
tools/: check-budgets.mjs  check-licences-js.sh  check-licences-py.sh  check-no-ts.sh  licence-allowlist.txt  lint_i18n_api.py
(+55 files in other folders)
