[build-system]
requires = ["setuptools>=83.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "edon-backend"
version = "0.1.0"
description = "e-DON Lesson Studio platform backend — one deployable (FastAPI app) plus workers importing the same framework-free core (AD-1)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139,<0.140",
    "uvicorn>=0.51,<0.52",
    "pydantic>=2.13,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "httpx>=0.28,<0.29",
    "ruff>=0.9",
    "import-linter>=2.1",
]

[tool.setuptools.packages.find]
where = ["src"]

# AD-1 made mechanical: core imports no sibling layer and no framework/queue/vendor SDK.
# The forbidden externals list grows as dependencies arrive (sqlalchemy/alembic land Story 1.3,
# procrastinate Epic 2, openai/anthropic Story 1.5) — they are fenced out of core in advance.
[tool.importlinter]
root_package = "edon"
include_external_packages = true

[[tool.importlinter.contracts]]
name = "core is framework-free and imports no outer layer (AD-1)"
type = "forbidden"
source_modules = ["edon.core"]
forbidden_modules = [
    "edon.api",
    "edon.adapters",
    "edon.workers",
    "fastapi",
    "starlette",
    "uvicorn",
    "procrastinate",
    "sqlalchemy",
    "alembic",
    "openai",
    "anthropic",
    "httpx",
]
