[build-system]
requires = ["setuptools>=83.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "edon-lesson-schema"
version = "1.0.0"
description = "Lesson Script Schema v1.0 — jsonschema validator wrapper (consumes the JSON Schema documents in ../lesson)"
requires-python = ">=3.12"
dependencies = [
    "jsonschema>=4.26,<5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
edon_lesson_schema = [
    "schemas/lesson/1.0/*.json",
    "schemas/lesson/1.0/blocks/*.json",
]
